renamed helhetskoncept to iSpect - Digital Besiktningsprocess

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 									</li>
 								</ul>
 								<div class="section-Links">
-										<a href="helhetskoncept/" class="common-BodyText">
+										<a href="/ispect/" class="common-BodyText">
 											<p class="margin-bottom-2 common-Link">
 													Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
 											</p>
@@ -298,25 +298,25 @@
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
 												<div class="img-fade"></div>
-												<img src="assets/img/projects/brf_skogsstjernan.jpg" alt="Projektfoto av BRF Skogsstjärnan" />
+												<img src="/assets/img/projects/brf_skogsstjernan.jpg" alt="Projektfoto av BRF Skogsstjärnan" />
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
 												<div class="img-fade"></div>
-												<img src="assets/img/projects/brf_theview.jpg" alt="Projektfoto av BRF The View" />
+												<img src="/assets/img/projects/brf_theview.jpg" alt="Projektfoto av BRF The View" />
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
 												<div class="img-fade"></div>
-												<img src="assets/img/projects/brf_haganova.jpg" alt="Projektfoto av BRF Haganova" />
+												<img src="/assets/img/projects/brf_haganova.jpg" alt="Projektfoto av BRF Haganova" />
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
 												<div class="img-fade"></div>
-												<img src="assets/img/projects/brf_terrassen.jpg" alt="Projektfoto av BRF Terrassen" />
+												<img src="/assets/img/projects/brf_terrassen.jpg" alt="Projektfoto av BRF Terrassen" />
 											</li>
 										</ul>
 										<ul class="controller center dots fromBottom" data-slider-id="83">
@@ -373,7 +373,7 @@
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
 								<p class="common-BodyText">
-									Vi erbjuder också ett samlat helhetskoncept med besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
+									Vi erbjuder också ett samlat ispect med besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
 								</p>
 								<p class="common-BodyText">
 									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
@@ -495,7 +495,7 @@
 								<h3 class="common-BodyTitle">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
 								<p class="common-BodyText">Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
 								<div class="section-Links">
-									<a href="/helhetskoncept">
+									<a href="/ispect">
 										<p class="common-Link">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
 									</a>
 									<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
@@ -548,8 +548,8 @@
 									<a href="/om_oss/">
 										<p class="text-blue">Om oss</p>
 									</a>
-									<a href="/helhetskoncept/">
-										<p class="text-blue">Vår digitala besiktningsprocess</p>
+									<a href="/ispect/">
+										<p class="text-blue">iSpect - Digital Besiktningsprocess</p>
 									</a>
 									<a href="/karriar/">
 										<p class="text-blue">Karriär</p>
