--- a/ispect/index.html
+++ b/ispect/index.html
@@ -2,7 +2,7 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Helhetskoncept</title>
+	<title>Besiktningsman.se | iSpect</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -221,8 +221,10 @@
 			<div class="container" style="height: 560px;padding-top: 5%;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<img src="../assets/svg/ispect_logo.svg" alt="Besiktningsman.se" class="margin-bottom-1" style="height: 100%;">
-						<h1>Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
+						<img src="../assets/svg/ispect_logo.svg" alt="Besiktningsman.se" style="height: 100%;">
+						<br>
+						<span class="margin-bottom-1 common-IntroText text-white toCenter fromCenter center">iSpect</span>
+						<p class="common-BodyTitle text-white">Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </p>
 					</div>
 				</div>
 			</div>
@@ -354,8 +356,8 @@
 									<a href="../om_oss/">
 										<p class="text-blue">Om oss</p>
 									</a>
-									<a href="../helhetskoncept/">
-										<p class="text-blue">Vår digitala besiktningsprocess</p>
+									<a href="../ispect/">
+										<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 									</a>
 									<a href="../karriar/">
 										<p class="text-blue">Karriär</p>
