--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -239,8 +239,8 @@
 								<a href="../om_oss/">
 									<p class="text-blue">Om oss</p>
 								</a>
-								<a href="../helhetskoncept/">
-									<p class="text-blue">Vår digitala besiktningsprocess</p>
+								<a href="../ispect/">
+									<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 								</a>
 								<a href="../karriar/">
 									<p class="text-blue">Karriär</p>
