--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -213,7 +213,7 @@
 							Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen,
 							har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt
 						</p>
-						<a href="../helhetskoncept/">
+						<a href="../ispect/">
 							<p class="common-Link">Mer om vår digitaliserade besiktningsprocess<i class="icono-arrow2-left"></i></p>
 						</a>
 					</div>
@@ -497,8 +497,8 @@ Fabege
 								<a href="../om_oss/">
 									<p class="text-blue">Om oss</p>
 								</a>
-								<a href="../helhetskoncept/">
-									<p class="text-blue">Vår digitala besiktningsprocess</p>
+								<a href="../ispect/">
+									<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 								</a>
 								<a href="../karriar/">
 									<p class="text-blue">Karriär</p>
