--- a/dokument/index.html
+++ b/dokument/index.html
@@ -826,8 +826,8 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 									<a href="../om_oss/">
 										<p class="text-blue">Om oss</p>
 									</a>
-									<a href="../helhetskoncept/">
-										<p class="text-blue">Vår digitala besiktningsprocess</p>
+									<a href="../ispect/">
+										<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 									</a>
 									<a href="../karriar/">
 										<p class="text-blue">Karriär</p>
