--- a/tjanster/entreprenad/bekraftelse/index.html
+++ b/tjanster/entreprenad/bekraftelse/index.html
@@ -2,27 +2,27 @@
 <html lang="se">
 
 <head>
-	<title>Förbesiktning - förbesikta innan det uppstår problem | Besiktningsman</title>
+	<title>Besiktningsman.se | Meddelande mottaget</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../../../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Det  nns vitala delar som kan vara svåra att besikta eller åtgärda när arbetet är färdigställt. En förbesiktning säkerställer att arbetet utförs korrekt. Välkommen" />
+	<meta name="description" content="Tack för ditt meddelande! Vi kommer att höra av oss så fort som möjligt." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
-	<meta property="og:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
+	<meta property="og:title" content="Meddelande mottaget" />
+	<meta property="og:description" content="Tack för ditt meddelande! Vi kommer att höra av oss så fort som möjligt." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/entreprenad" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../../../../../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
-	<meta name="twitter:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
+	<meta name="twitter:title" content="Meddelande mottaget" />
+	<meta name="twitter:description" content="Tack för ditt meddelande! Vi kommer att höra av oss så fort som möjligt." />
 	<meta name="twitter:card" content="summary" />
-	<!-- Fonts and Material Icons -->
+	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
 	<link href="../../../../../css/slides.css" rel="stylesheet" type="text/css">
@@ -37,17 +37,28 @@
 	<!-- End Google Tag Manager -->
 	<!-- google site verification -->
 	<meta name="google-site-verification" content="uIsQeRnTuJtqD_rORyLb6GKgVNufjeEkczKMFszRIO4" />
-	<!-- Hotjar Tracking Code for www.besiktningsman.se -->
-	<script>
-	    (function(h,o,t,j,a,r){
-	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-	        h._hjSettings={hjid:754022,hjsv:6};
-	        a=o.getElementsByTagName('head')[0];
-	        r=o.createElement('script');r.async=1;
-	        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-	        a.appendChild(r);
-	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-	</script>
+		<!-- heap analytics -->
+		<script type="text/javascript">
+		    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+		      heap.load("1203366256");
+		</script>
+		<!-- Facebook Pixel Code -->
+		<script>
+		  !function(f,b,e,v,n,t,s)
+		  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+		  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+		  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+		  n.queue=[];t=b.createElement(e);t.async=!0;
+		  t.src=v;s=b.getElementsByTagName(e)[0];
+		  s.parentNode.insertBefore(t,s)}(window, document,'script',
+		  'https://connect.facebook.net/en_US/fbevents.js');
+		  fbq('init', '1747503458639948');
+		  fbq('track', 'PageView');
+		</script>
+		<noscript><img height="1" width="1" style="display:none"
+		  src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1"
+		/></noscript>
+		<!-- End Facebook Pixel Code -->
 </head>
 
 <body class="slides scroll animated simplifiedMobile defaultScroll">
