--- a/tjanster/entreprenad/bekraftelse/index.html
+++ b/tjanster/entreprenad/bekraftelse/index.html
@@ -242,7 +242,7 @@
 					<img src="../../../../../assets/img/nyheter/blogpage_card.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
 				</a>
 				<a href="../../../../../nyheter/" class="globalFooterCard soft-shadow white">
-					<img src="../../../../../assets/img/nyheter/newspage_card.png" alt="Länk till våran nyhetssida - Läs mer om vad som sker i besiktningsbranschen här" />
+					<img src="../../../../../assets/img/nyheter/newspage_card.png" alt="Länk till våran nyhetssida - Läs mer om vad som sker i besiktningsbranschen" />
 				</a>
 		</div>
 	</section>
