--- a/ispect/index.html
+++ b/ispect/index.html
@@ -312,7 +312,8 @@
 								<p class="common-BodyText">Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 								<div class="section-Links">
 										<!-- typeform button -->
-										<a class="typeform-share common-Button blue margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+										<p class="common-BodyTitle2">Intresserad? Kontakta oss för att komma igång.</p>
+										<a class="typeform-share common-Button blue margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left" target="_blank">
 											kontakta oss
 										</a>
 										<!-- typeform JS -->
