added order type forms to landing page + redirects to thank you page, just like the services pages

--- a/index.html
+++ b/index.html
@@ -260,14 +260,15 @@
 										<p>Tillgång till byggfelsstatistik.</p>
 									</li>
 								</ul>
+								<a href="/ispect/" class="common-BodyText">
+									<p class="margin-bottom-2 common-Link">
+											Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
+									</p>
+								</a>
 								<div class="section-Links">
-										<a href="/ispect/" class="common-BodyText">
-											<p class="margin-bottom-2 common-Link">
-													Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
-											</p>
-										</a>
 										<!-- typeform button -->
-										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+										<p class="common-BodyTitle2">Intresserad? Kontakta oss för att komma igång.</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left" target="_blank">
 											kontakta oss
 										</a>
 										<!-- typeform JS -->
@@ -380,11 +381,12 @@
 								</p>
 								<div class="section-Links">
 										<a href="tjanster/entreprenad/">
+											<p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
 											<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 										</a>
 										<!-- typeform button -->
-										<p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
-										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+										<p class="common-BodyTitle2">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left" target="_blank">
 											Lämna ett meddelande
 										</a>
 										<!-- typeform JS -->
@@ -420,12 +422,13 @@
 								</p>
 								<div class="section-Links">
 										<a href="tjanster/brf/">
+											<p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
 											<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 										</a>
 										<!-- typeform button -->
-										<p>Frågor? Hör gärna av dig så hjälper vi till!</p>
-										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-											Lämna ett meddelande här
+										<p class="common-BodyTitle2">Redo att boka? Hör gärna av dig så hjälper vi till!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
 										</a>
 										<!-- typeform JS -->
 										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
@@ -456,15 +459,16 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
-								<h3 class="common-BodyTitle">Småhus, lägenheter, fritidshus</h3>
+								<h3 class="common-BodyTitle">Småhus, lägenheter och fritidshus</h3>
 								<p class="common-BodyText">Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<div class="section-Links">
 									<a href="tjanster/privat/">
+										<p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
 										<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 									</a>
-									<p>Osäker? Vi hjälper dig gärna!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-										Lämna ett meddelande här
+									<p  class="common-BodyTitle2">Redo att boka? Hör av dig så hjälper vi dig!</p>
+									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+										Lämna ett meddelande
 									</a>
 									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									<a href="tel:0101654000">
