--- a/tjanster/privat/bekraftelse/index.html
+++ b/tjanster/privat/bekraftelse/index.html
@@ -187,7 +187,7 @@
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1 margin-bottom-2 service-text">
 					<div class="center">
-						<img class="margin-bottom-1" src="../../../../../assets/svg/bm_se_checkmark_color.webp" alt="Besiktningsman.se">
+						<img class="margin-bottom-1" src="../../../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se">
 						<h1 class="">Tack för ditt meddelande!</h1>
 						<h3 class="common-BodyText">Vi kommer att höra av oss så fort som möjligt.</h3>
 					</div>
@@ -223,7 +223,7 @@
 	<div class="container-lg padding-5 center">
 		<h3 class="center">Läs mer</h3>
 		<div class="center-m-down">
-				<a href="../../../../tjanster/entreprenad/" class="common-Button text-blue">
+				<a href="../../../../tjanster/privat/" class="common-Button text-blue">
 					Tillbaka till tjänsterna
 				</a>
 				<a href="../../../../om_oss/" class="common-Button text-blue">
