Sub page meta updated

--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -9,7 +9,7 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Det  nns vitala delar som kan vara svåra att besikta eller åtgärda när arbetet är färdigställt. En förbesiktning säkerställer att arbetet utförs korrekt. Välkommen" />
+	<meta name="description" content="Det finns vitala delar som kan vara svåra att besikta eller åtgärda när arbetet är färdigställt. En förbesiktning säkerställer att arbetet utförs korrekt. Välkommen" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
