--- a/tjanster/privat/bekraftelse/index.html
+++ b/tjanster/privat/bekraftelse/index.html
@@ -119,7 +119,7 @@
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="../../../../../" class="logo"><img src="../../../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
+			<a href="../../../../../" class="logo"><img src="../../../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
 				<li>
