fix for projects mobile + removed old classes/ids

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -165,11 +165,10 @@
 	    <div class="stripe s3"></div>
 	    <div class="stripe s4"></div>
 	</div>
-	<!-- HEADER og -->
-	<section class="slide" style="background: transparent;">
+	<!-- content -->
+	<section class="slide projects" style="background: transparent;">
 		<div class="content">
 			<div class="container margin-top-1" style="height:560px;">
-					<!-- contents -->
 					<h1 class="common-IntroText center">Våra projekt</h1>
 					<p class="common-BodyText center">Här byggs framtiden med noll fel</p>
 					<div class="photobanner">
@@ -180,7 +179,6 @@
 						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
 						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
 					</div>
-
 			</div>
 		</div>
 	</section>
@@ -227,7 +225,7 @@
 
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="container-lg padding-5 center">
-			<h3 class="center">Gå vidare här:</h3>
+			<h3 class="center common-IntroText">Gå vidare här:</h3>
 			<div class="center-m-down">
 					<a href="../../om_oss/" class="common-Button text-blue">
 						Om oss
