Updated link image meta tags with a new image

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<meta property="og:url" content="https://www.besiktningsman.se/dokument" />
 	<meta property="og:site_name" content="Besiktningsman.se | Dokument">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
 	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<!-- Fonts and Material Icons -->
