--- a/ispect/index.html
+++ b/ispect/index.html
@@ -36,7 +36,7 @@
 	/>
 	<meta property="og:url" content="https://www.besiktningsman.se/helhetskoncept" />
 	<meta property="og:site_name" content="Besiktningsman.se | Helhetskoncept">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title" content="Vårt helhetskoncept med Digitaliserad entreprenadbesiktning" />
 	<meta name="twitter:description" content="
 	Vårt helhetskoncept innebär:
