--- a/karriar/index.html
+++ b/karriar/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="Starta din nya karriär hos oss" />
 	<meta property="og:url" content="https://www.besiktningsman.se/" />
 	<meta property="og:site_name" content="Besiktningsman.se | Karriär">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Besiktningsman.se expanderar kraftigt och söker besiktningsmän i alla fack" />
 	<meta name="twitter:title" content="Starta din nya karriär hos oss" />
