--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="Kontakta oss" />
 	<meta property="og:url" content="https://www.besiktningsman.se/kontakt" />
 	<meta property="og:site_name" content="Besiktningsman.se | Kontakta oss">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Kontakta oss med frågor eller för att boka en besiktning" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
