--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
 	<meta property="og:url" content="https://www.besiktningsman.se/nyheter" />
 	<meta property="og:site_name" content="Besiktningsman.se | Nyheter">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
 	<meta name="twitter:title" content="Nyheter från Besiktningsman.se" />
