--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess." />
 	<meta property="og:url" content="https://www.besiktningsman.se/om_oss" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess." />
 	<meta name="twitter:title" content="Om oss" />
