--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/privat" />
 	<meta property="og:site_name" content="Besiktningsman.se | Besktningstjänster för privatpersoner">
-	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Besiktning för privatpersoner som skall bygga, ändra eller kontrollera husets skick." />
 	<meta name="twitter:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
