--- a/projekt/index.html
+++ b/projekt/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.besiktningsman.se/projekt" />
 	<meta property="og:site_name" content="Besiktningsman.se | Projekt">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta property="og:title" content="Översikt av våra projekt" />
 	<meta property="og:description" content="En översikt av projekt som är besiktade av Besiktningsman.se" />
 	<meta name="twitter:card" content="summary" />
