--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
-	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:image" content="../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta name="twitter:title" content="Besiktningstjänster för bostadsrättsföreningar" />
