--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -764,38 +764,28 @@
 			<div class="customFooterSeperator"></div>
 			<div class="customFooterSocials">
 					<h4 class="">Håll kontakten</h4>
-					<div class="right">
-
-							<a class="socialIcons" href="https://www.facebook.com/Besiktningsman/">
-									<svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"><path fill="currentColor" d="M21.5 20.45c0 .636-.32 1.05-.968 1.05h-5.45v-7.946h2.772l.42-3.405h-3.19V8.377c0-.908.25-1.635 1.592-1.635h1.907V4.036c-.583-.04-1.487-.125-2.67-.125-2.463 0-4.33 1.465-4.33 4.156v2.083H8.667v3.404h2.916V21.5H1.48c-.653 0-.98-.414-.98-1.05V1.913C.5 1.278.827.5 1.48.5h19.052c.647 0 .968.778.968 1.413V20.45z"/></svg>
-							</a>
-							<a class="socialIcons" href="https://twitter.com/BjornSelling">
-									<svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="19" viewBox="0 0 22 19"><path fill="currentColor" d="M21.193 1.286c-.857.52-1.804.9-2.816 1.1A4.377 4.377 0 0 0 15.143.954c-2.445 0-4.43 2.034-4.43 4.544 0 .355.038.7.114 1.034-3.682-.19-6.947-1.996-9.134-4.75a4.632 4.632 0 0 0-.6 2.288c0 1.576.782 2.967 1.972 3.782a4.372 4.372 0 0 1-2.01-.567v.056c0 2.203 1.53 4.04 3.558 4.456-.372.107-.764.16-1.168.16a4.32 4.32 0 0 1-.834-.08c.565 1.805 2.2 3.12 4.14 3.154a8.746 8.746 0 0 1-5.504 1.946c-.357 0-.71-.02-1.057-.062a12.331 12.331 0 0 0 6.792 2.04c8.152 0 12.61-6.923 12.61-12.93 0-.197-.005-.394-.012-.588a9.126 9.126 0 0 0 2.21-2.35 8.74 8.74 0 0 1-2.545.714 4.538 4.538 0 0 0 1.948-2.514"/></svg>
-							</a>
-							<a class="socialIcons" href="https://www.linkedin.com/company/24778105/">
-								<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="22" height="22">
-									<g fill="none" fill-rule="evenodd">
-										<g fill-rule="nonzero">
-											<path d="m32 30c0 1.104-0.896 2-2 2h-28c-1.104 0-2-0.896-2-2v-28c0-1.104 0.896-2 2-2h28c1.104 0 2 0.896 2 2v28z" fill="#47525D"/>
-											<g transform="translate(7 6)" fill="#fff">
-												<rect y="5" width="4" height="14"/>
-												<path d="m13.499 5c-2.791 0-3.271 1.018-3.499 2v-2h-4v14h4v-8c0-1.297 0.703-2 2-2 1.266 0 2 0.688 2 2v8h4v-7c0-4-0.521-7-4.501-7z"/>
-												<circle cx="2" cy="2" r="2"/>
-											</g>
-										</g>
-									</g>
-								</svg>
-							</a>
-							<a class="socialIcons" href="https://medium.com/besiktningsbloggen">
-								<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-									<g fill="none" fill-rule="evenodd">
-									<g fill="#47525D" fill-rule="nonzero">
-									<path d="m16 0c-8.8364 0-16 7.1627-16 15.999 0 8.8367 7.1639 16.001 16 16.001 8.8358 0 16-7.1639 16-16.001 0-8.8366-7.1639-15.999-16-15.999zm9.0762 10.604h-0.7289c-0.27069 0-0.65327 0.39038-0.65327 0.64029v9.0584c0 0.25023 0.38264 0.59129 0.65327 0.59129h0.7289l1.3e-4 2.1502h-6.604v-2.1502h1.3822v-9.5221h-0.067705l-3.2277 11.672h-2.499l-3.1861-11.672h-0.080635v9.522h1.3822v2.1502l-5.5288 6.5e-5v-2.1502h0.70791c0.29161 0 0.67426-0.34107 0.67426-0.59129v-9.0583c0-0.2499-0.38264-0.64029-0.67426-0.64029h-0.70791v-2.1502h6.9135l2.2699 8.447h0.062442l2.2909-8.447h6.8928v2.1502h-1.3e-4z"/>
-									</g>
-									</g>
-								</svg>
-							</a>
-					</div>
+            <div class="right">
+                <a class="socialIcons" href="https://www.instagram.com/besiktningsman.se/">
+									<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+									  <path d="M19.8 5.6a1.4 1.4 0 1 1-2.8 0 1.4 1.4 0 0 1 2.8 0zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-10.2a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4zm0-3.6h4.8c1.2 0 1.9.3 2.3.4.5.3 1 .5 1.4 1 .4.4.6.8.9 1.3.1.4.3 1 .4 2.3a83.3 83.3 0 0 1-.4 11.9c-.3.5-.5 1-1 1.4-.4.4-.8.6-1.3.9-.4.1-1 .3-2.3.4A83.3 83.3 0 0 1 5 21.4c-.5-.3-1-.5-1.4-1-.4-.4-.6-.8-.9-1.3-.1-.4-.3-1-.4-2.3A83.3 83.3 0 0 1 2.6 5c.3-.5.5-1 1-1.4.4-.4.8-.6 1.3-.9.4-.1 1-.3 2.3-.4H12zM12 0H7C5.9.2 5 .4 4.2.7c-.7.3-1.4.7-2 1.4C1.2 2.7.8 3.4.5 4.1c-.3.8-.5 1.7-.5 3a85.2 85.2 0 0 0 .5 12.8c.3.7.7 1.4 1.4 2 .7.8 1.4 1.2 2.1 1.5.8.3 1.7.5 3 .5a85.2 85.2 0 0 0 12.8-.5c.7-.3 1.4-.7 2-1.4.8-.7 1.2-1.4 1.5-2.1.3-.8.5-1.7.5-3a85.2 85.2 0 0 0-.5-12.8c-.3-.7-.7-1.4-1.4-2-.7-.8-1.4-1.2-2.1-1.5-.8-.3-1.7-.5-3-.5L12 0z" fill="#47525D" fill-rule="evenodd"/>
+									</svg>
+                </a>
+                <a class="socialIcons" href="https://www.facebook.com/Besiktningsman/">
+                    <svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"><path fill="currentColor" d="M21.5 20.45c0 .636-.32 1.05-.968 1.05h-5.45v-7.946h2.772l.42-3.405h-3.19V8.377c0-.908.25-1.635 1.592-1.635h1.907V4.036c-.583-.04-1.487-.125-2.67-.125-2.463 0-4.33 1.465-4.33 4.156v2.083H8.667v3.404h2.916V21.5H1.48c-.653 0-.98-.414-.98-1.05V1.913C.5 1.278.827.5 1.48.5h19.052c.647 0 .968.778.968 1.413V20.45z"/></svg>
+                </a>
+                <a class="socialIcons" href="https://twitter.com/BjornSelling">
+                    <svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="19" viewBox="0 0 22 19"><path fill="currentColor" d="M21.193 1.286c-.857.52-1.804.9-2.816 1.1A4.377 4.377 0 0 0 15.143.954c-2.445 0-4.43 2.034-4.43 4.544 0 .355.038.7.114 1.034-3.682-.19-6.947-1.996-9.134-4.75a4.632 4.632 0 0 0-.6 2.288c0 1.576.782 2.967 1.972 3.782a4.372 4.372 0 0 1-2.01-.567v.056c0 2.203 1.53 4.04 3.558 4.456-.372.107-.764.16-1.168.16a4.32 4.32 0 0 1-.834-.08c.565 1.805 2.2 3.12 4.14 3.154a8.746 8.746 0 0 1-5.504 1.946c-.357 0-.71-.02-1.057-.062a12.331 12.331 0 0 0 6.792 2.04c8.152 0 12.61-6.923 12.61-12.93 0-.197-.005-.394-.012-.588a9.126 9.126 0 0 0 2.21-2.35 8.74 8.74 0 0 1-2.545.714 4.538 4.538 0 0 0 1.948-2.514"/></svg>
+                </a>
+                <a class="socialIcons" href="https://www.linkedin.com/company/24778105/">
+									<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="22" height="22">
+										<g fill="none" fill-rule="evenodd"><g fill-rule="nonzero"><path d="m32 30c0 1.104-0.896 2-2 2h-28c-1.104 0-2-0.896-2-2v-28c0-1.104 0.896-2 2-2h28c1.104 0 2 0.896 2 2v28z" fill="#47525D"/><g transform="translate(7 6)" fill="#fff"><rect y="5" width="4" height="14"/><path d="m13.499 5c-2.791 0-3.271 1.018-3.499 2v-2h-4v14h4v-8c0-1.297 0.703-2 2-2 1.266 0 2 0.688 2 2v8h4v-7c0-4-0.521-7-4.501-7z"/><circle cx="2" cy="2" r="2"/></g></g></g>
+									</svg>
+                </a>
+								<a class="socialIcons" href="https://medium.com/besiktningsbloggen">
+									<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><g fill="none" fill-rule="evenodd"><g fill="#47525D" fill-rule="nonzero"><path d="m16 0c-8.8364 0-16 7.1627-16 15.999 0 8.8367 7.1639 16.001 16 16.001 8.8358 0 16-7.1639 16-16.001 0-8.8366-7.1639-15.999-16-15.999zm9.0762 10.604h-0.7289c-0.27069 0-0.65327 0.39038-0.65327 0.64029v9.0584c0 0.25023 0.38264 0.59129 0.65327 0.59129h0.7289l1.3e-4 2.1502h-6.604v-2.1502h1.3822v-9.5221h-0.067705l-3.2277 11.672h-2.499l-3.1861-11.672h-0.080635v9.522h1.3822v2.1502l-5.5288 6.5e-5v-2.1502h0.70791c0.29161 0 0.67426-0.34107 0.67426-0.59129v-9.0583c0-0.2499-0.38264-0.64029-0.67426-0.64029h-0.70791v-2.1502h6.9135l2.2699 8.447h0.062442l2.2909-8.447h6.8928v2.1502h-1.3e-4z"/></g></g>
+									</svg>
+								</a>
+            </div>
 			</div>
 		</div>
 	</div>
