Removed duplicate text and reformatted old

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -374,10 +374,11 @@
 								<ul>
 									<li class="col-5-12">
 										<p class="bold margin-bottom-1">
-											Efterbesiktning kan ske för att konstatera om fel som noterats vid tidigare besiktning har avhjälpts eller inte. Efterbesiktning kan påkallas av entreprenör eller beställare
+											Efterbesiktning kan ske för att konstatera om fel som noterats vid tidigare besiktning har avhjälpts eller inte.
+											Efterbesiktning kan påkallas av entreprenör eller beställare.
 										</p>
 										<p>
-											Besiktningsman.se erbjuder Efterbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 § 5(se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt. Vi erbjuder
+											Besiktningsman.se erbjuder Efterbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 § 5 (se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt. Vi erbjuder
 											även komplett besiktningsgrupp.
 										</p>
 										<p>
@@ -401,7 +402,7 @@
 											<br>
 											<br> Av beställaren skriftligt påtalat fel enligt kap7§12 ska inte heller tas upp, utan dessa ska behandlas som särskild besiktning om part påkallar sådan. Inget hindrar dock att en förrättning omfattar både efterbesiktning och särskild besiktning,
 											om detta angivits i kallelsen.”</p>
-											<a href="../../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en efterbesiktning innebär</p></a>
+											<a href="../../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank"><p class="common-Link">Läs vår pdf som beskriver i detalj vad en efterbesiktning innebär</p></a>
 									</li>
 								</ul>
 							</div>
@@ -448,12 +449,12 @@
 											Besiktningsman.se erbjuder Garantibesiktning/2-årsbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 §3 (se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt.
 											Vi erbjuder även komplett besiktningsgrupp.
 										</p>
-										<p>Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats. Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.</p>
-										<p>Denna tjänst kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster</p>
 										<p>
-											Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats. Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.
+											Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats.
 											<br>
-											<br> Pris offereras separat.
+											Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.
+											<br>
+											Denna tjänst kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster
 										</p>
 										<p class="bold margin-bottom-1">Enligt AB04 och ABT06 kap 7 §3</p>
 										<p>
