--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -270,7 +270,16 @@
 										<p>
 											<b>4</b> i övrigt särskilda skäl föreligger</p>
 										<p class="quotes">”Kommentar till kap 7 §1 i AB04 och ABT06, Ett särskilt skäl för förbesiktning kan vara att parterna i förväg vill få besiktningsmannens bedömning av kontraktsenhetligheten av visst arbete som antingen återkommer i ett stort antal eller gäller
-											principer eller kvalitetskrav för utförandet, sk normerande besiktning.”</p>
+											principer eller kvalitetskrav för utförandet, sk normerande besiktning.”
+										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -305,6 +314,14 @@
 										<p>• ”Slutbesiktningen är den för båda parter viktigaste besiktningen. Det gäller nämligen här att pröva och avgöra frågan om godkännande av entreprenaden, vilket i sin tur har många betydelsefulla konsekvenser för parterna. Det bör betonas, att
 											– om inte parterna kommer överens om annat – slutbesiktning ska ske först vid kontraktstidens utgång eller om entreprenaden färdigställas senare, utan dröjsmål efter det att entreprenören anmält entreprenaden färdigställd.”</p>
 										<a href="../../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en slutbesiktning innebär</p></a>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -332,6 +349,14 @@
 											<br>”Förutsättningen för besiktningsmannens beslut att avbryta besiktningen är hans bedömning av möjligheten av att entreprenaden kommer att godkännas.</p>
 										<p>Som angivits ovan kan man inte närmare ange någon nivå för när en entreprenad inte kan godkännas. Bedömningen får ske från fall till fall med hänsyn taget bla till objektets art och omfattning.</p>
 										<p>Begreppet ”uppenbarligen” innebär att det enligt besiktningsmannens bedömning ska framstå som fullständigt klart att entreprenaden i det skick den är inte kan komma att godkännas.”</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -366,6 +391,14 @@
 											<b>- Kommentar,</b>
 											<br>Entreprenören avgör vilken tid som behövs för avhjälpande och avropar i god tid när entreprenaden är färdig för fortsatt slutbesiktning.
 										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -401,8 +434,18 @@
 											vid efterbesiktning.
 											<br>
 											<br> Av beställaren skriftligt påtalat fel enligt kap7§12 ska inte heller tas upp, utan dessa ska behandlas som särskild besiktning om part påkallar sådan. Inget hindrar dock att en förrättning omfattar både efterbesiktning och särskild besiktning,
-											om detta angivits i kallelsen.”</p>
-											<a href="../../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank"><p class="common-Link">Läs vår pdf som beskriver i detalj vad en efterbesiktning innebär</p></a>
+											om detta angivits i kallelsen.”
+										</p>
+										<a href="../../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank">
+										<p class="common-Link">Läs vår pdf som beskriver i detalj vad en efterbesiktning innebär</p></a>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -434,6 +477,14 @@
 											<br> Särskild besiktning enligt punkt 2 ovan avser dels fel som framträtt under garantitiden och där garantiansvar eventuellt föreligger, och dels sådana fel som framträtt efter garantitidens utgång men inom den 10-åriga ansvarstiden.”
 										</p>
 										<a href="../../assets/documents/brf/brf_sarskildbesiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en särskild besiktning innebär</p></a>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -469,6 +520,14 @@
 											<b>- Kommentar,</b>
 											<br>Vid bokning av garantibesiktning kan ni tilläggsbeställa att även efterbesiktning av tidigare besiktning ska utföras.
 										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -494,8 +553,18 @@
 											<br>Överbesiktning ersätter den besiktning eller del av besiktning som har föranlett påkallandet av överbesiktning.
 											<br>Överbesiktning skall skriftligen påkallas inom tre veckor efter det att part fått del av besiktningsutlåtandet.”
 										</p>
-										<p>• ”Överbesiktning verkställs av en person som parterna gemensamt utser eller av en överbesiktningsnämnd. En sådan nämnd skall bestå av tre personer, av vilka parterna vardera utser en och dessa två personer den tredje, som ska vara ordförande.
-											Ledamot får inte tidigare ha verkställt besiktning i entreprenaden. ”</p>
+										<p>
+											• ”Överbesiktning verkställs av en person som parterna gemensamt utser eller av en överbesiktningsnämnd. En sådan nämnd skall bestå av tre personer, av vilka parterna vardera utser en och dessa två personer den tredje, som ska vara ordförande.
+											Ledamot får inte tidigare ha verkställt besiktning i entreprenaden. ”
+										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -532,6 +601,14 @@
 											följs, vara med vid det tekniska samrådet, besiktningar och andra kontroller samt skriva ett utlåtande som ska vara underlag för byggnadsnämndens slutbesked.</p>
 										<p>Den kontrollansvarige måste ha en självständig ställning. Det betyder till exempel att han eller hon inte får vara nära släkt med den som utför åtgärden eller arbeta på samma företag.</p>
 										<p>För att bli certifierad krävs kunskap, erfarenhet och lämplighet för uppgiften. Certifieringar får endast utfärdas av certifieringsorgan, det vill säga företag som har ackrediterats för denna uppgift av myndigheten Swedac.</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -566,6 +643,14 @@
 											<br>
 											<br> Byggnadens ägare ansvarar också för att fel och brister i ventilationssystem som upptäcks vid OVK eller annars under byggnadens brukstid åtgärdas omgående.”
 										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -600,6 +685,14 @@
 											<br>
 											<b>Betongplatta på mark</b> - Om den är utförd 1985 eller tidigare är det vanligt att fukt från underliggande mark transportas upp i betongplattan och vidare upp i uppreglat golv.
 										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
